<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>scaled_controllers</name>
  <version>0.1.1</version>
  <description>scaled controllers metapackage</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/scaled_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>scaled_joint_trajectory_controller</exec_depend>
  <exec_depend>speed_scaling_interface</exec_depend>
  <exec_depend>speed_scaling_state_controller</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
