<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scaled_joint_trajectory_controller</name>
  <version>0.1.1</version>
  <description>Provides controllers that use the speed scaling interface.</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>
  <license file="include/scaled_joint_trajectory_controller/scaled_joint_command_interface.h">BSD-3-Clause</license>

  <url type="website">http://wiki.ros.org/scaled_joint_trajectory_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
