<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>speed_scaling_interface</name>
  <version>0.1.1</version>
  <description>Hardware interface reading a scalar value from robot hardware.</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/speed_scaling_interface</url>

  <author email="exner@fzi.de">Felix Exner</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
</package>
